--- a/index.html
+++ b/index.html
@@ -102,36 +102,36 @@
             <div class="outer-container" style="background-color: var(--medium-pink);">
                 <h1 class="title">Work Experience</h1>
 
-                <div class="experience-inner-container" onclick="openDialog('nrc-dialog')">
-                    <div>
+                <div class="experience-inner-container" style="display: flex;" onclick="openDialog('nrc-dialog')">
+                    <div class="experience-titles">
                         <h3>Junior Realtime Interface Software Engineer</h3>
                         <h5>National Research Council - Herzberg Astronomy & Astrophysics</h5>
                         <h5>Victoria, BC</h5>
                         <h5>Jan 2025 - Apr 2025</h5>
                     </div>
-                    <p> bla bla bla</p>
+                    <p class="experience-desc"> bla bla bla</p>
                     <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/>
                 </div>
 
                 <div class="experience-inner-container" onclick="openDialog('zetron-dialog')">
-                    <div>
+                    <div class="experience-titles">
                         <h3>Software Engineer Co-op</h3>
                         <h5>Zetron</h5>
                         <h5>Victoria, BC</h5>
                         <h5>Sep 2023 - Aug 2024</h5>
                     </div>
-                    <p>Section explaining what I did at Zetron.</p>
+                    <p class="experience-desc">Section explaining what I did at Zetron.</p>
                     <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/>
                 </div>
 
                 <div class="experience-inner-container" onclick="openDialog('INO-dialog')">
-                    <div>
+                    <div class="experience-titles">
                         <h3>In-N-Out Associate</h3>
                         <h5>In-N-Out</h5>
                         <h5>Livermore, CA</h5>
                         <h5>June 2017 - Sep 2023</h5>
                     </div>
-                    <p>Section explaining what I did at In-N-Out</p>
+                    <p class="experience-desc">Section explaining what I did at In-N-Out</p>
                     <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/>
                 </div>
 
@@ -182,31 +182,53 @@
         </section>
 
         <!-- DIALOGS -->
-        <dialog id="zetron-dialog" class="dialog">
-            <div>
-                zetron dialog
-            </div>
-            <button id="close-zetron-dialog" class="btn" style="outline: none;" onclick="closeDialog('zetron-dialog')">close</button>
-        </dialog>
-
-        <dialog id="INO-dialog" class="dialog">
-            <div>
-                in-n-out dialog
-            </div>
-            <button id="close-INO-dialog" class="btn" style="outline: none;" onclick="closeDialog('INO-dialog')">close</button>
-        </dialog>
-
-        <dialog id="nrc-dialog" class="dialog">
-            <div> xfdc dialog
+         <dialog id="nrc-dialog" class="dialog">
+            <div class="dialog-bullets">
                 <ul>
-                    <li>bullet point 1</li>
-                    <li>bullet point 2</li>
+                    <li>Redesigned and refactored the browser-based real-time user interface for the Herzberg Extensible 
+                        Adaptive Real-time Toolkit (HEART) used in Adaptive Optics systems.</li>
+                    <li>Worked with HTML/CSS/JavaScript, C, Python, and Git in a Linux development environment on an Agile Scrum Team.</li>
+                    <li>Improved usability and scalability by restructuring the application layout based on user feedback and 
+                        observed workflows; standardized component styling, spacing, and sizing.</li>
+                    <li>Improved user experience by implemented new UI features, including a dropdown error log viewer, and loading indicators.</li>
+                    <li>Enhanced code readability and maintainability by refactoring and debugging the web application’s front-end codebase.</li>
+                    <li>Developed unit tests in C using CMocka to verify Adaptive Optics calculations and ensure correctness.</li>
+                    <li>Prototyped and presented an automated browser testing framework using Selenium and Python, enabling repeatable UI validation.</li>
+                    <li>Improved data handling by designing and implementing a JSON-based data transmission system between the server and web application.</li>
                 </ul>
             </div>
             
             <button id="close-nrc-dialog" class="btn" style="outline: none;" onclick="closeDialog('nrc-dialog')">close</button>
         </dialog>
 
+        <dialog id="zetron-dialog" class="dialog">
+            <div class="dialog-bullets">
+                <ul>
+                    <li>Collaborated and consistently delivered scrum goals on two Agile Scrum Teams, one on an embedded Linux platform for a radio system product
+                        and another on a new library implementing the Digital Fixed Station Interface (DFSI) protocol. </li>
+                    <li>Automated the build, test, and deployment process by designing and implementing Azure DevOps YAML CI/CD pipelines.</li>
+                    <li>Led the design and implementation of an object-oriented automated test suite for the DFSI library, using Python and C++. Created a multithreaded,
+                        event-based architecture to simulate UDP packet transit between a Fixed Station Client and a Fixed Station Host. Integrated D-Bus, UDP Sockets, Pytest, and managed the library's executable as a background process.</li>
+                    <li>Decreased the product's automated test suite speed by 60 minutes through modifying and retrieving the radio system's internal epoch time via PUT and GET HTTP endpoints in C; verified functionality by creating Pytest tests.</li>
+                    <li>Monitored the radio system's SoM internal temperature and configured GPIO pin values via PUT and GET HTTP endpoints in C; verified functionality by creating Pytest tests.</li>
+                    <li>Contributed to developing a STM32L4 custom bootloader and implemented firmware update mechanisms in C.</li>
+                    <li>Integrated SWUpdate with the product's reverse proxy, along with obtaining the current and previous software versions in C. Crafted a JavaScript/HTML/CSS webpage to preform software updates and display software versions.
+                        Developed automated tests with Pytest and Selenium to validate both the front-end and back-end software update functionalities.</li>
+                </ul>
+            </div>
+            <button id="close-zetron-dialog" class="btn" style="outline: none;" onclick="closeDialog('zetron-dialog')">close</button>
+        </dialog>
+
+        <dialog id="INO-dialog" class="dialog">
+            <div class="dialog-bullets">
+                <ul>
+                    <li>Promoted to highest level before management, demonstrating exceptional performance and dedication.</li>
+                    <li>Utilizes a detailed-oriented mindset to accurately prepare high quality food, with an emphasis on excellent customer service in a fast-paced, dynamic, and collaborative environment.</li>
+                    <li>Mentored and onboarded new hires by providing clearly communicated one-on-one feedback, resulting in improved multitasking and prioritization skills.</li>
+                </ul>
+            </div>
+            <button id="close-INO-dialog" class="btn" style="outline: none;" onclick="closeDialog('INO-dialog')">close</button>
+        </dialog>
 
         <footer class="footer">
             <div id="socials-container" style="margin-left: 1rem;">
