correcting overlaping elements in mobile view

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 class="title">About Me</h1>
 
                 <div class="overview-container">
-                    <h4 id="intro">Welcome to my portfolio! I currently finishing up my Computer Science degree at the 
+                    <h4 id="intro">Welcome to my portfolio! I'm currently finishing up my Computer Science degree at the 
                         Univeristy of Victoria. When I am not coding, I'm often found biking to dance
                         classes, baking sourdough bread, or exploring new hiking spots. I invite you to delve into a piece 
                         of my world, and join me on my programming journey!
@@ -81,7 +81,7 @@
                             <img src="./assets/education.png" alt="education img" class="icon" draggable="false"/>
                             <h3 class="about-header">Education</h3>
                         </div>
-                        <p >B.Sc. Computer Science from University of Victoria</p>
+                        <p>B.Sc. Computer Science from University of Victoria</p>
                     </div>
 
                     <div class="overview-container text-outline">
@@ -102,14 +102,14 @@
             <div class="outer-container" style="background-color: var(--medium-pink);">
                 <h1 class="title">Work Experience</h1>
 
-                <div class="experience-inner-container" style="display: flex;" onclick="openDialog('nrc-dialog')">
+                <div class="experience-inner-container" onclick="openDialog('nrc-dialog')">
                     <div class="experience-titles">
                         <h3>Junior Realtime Interface Software Engineer</h3>
                         <h5>National Research Council - Herzberg Astronomy & Astrophysics</h5>
                         <h5>Victoria, BC</h5>
                         <h5>Jan 2025 - Apr 2025</h5>
                     </div>
-                    <p class="experience-desc"> bla bla bla</p>
+                    <p class="experience-desc">Contributed to the design, implementation, and testing of a real-time web interface for the HEART software framework for Adaptive Optics systems.</p>
                     <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/>
                 </div>
 
@@ -120,7 +120,7 @@
                         <h5>Victoria, BC</h5>
                         <h5>Sep 2023 - Aug 2024</h5>
                     </div>
-                    <p class="experience-desc">Section explaining what I did at Zetron.</p>
+                    <p class="experience-desc">Developed and tested software on an embedded linux platform for radio communication devices, included CI/CD automation, networking protocols, and firmware update mechanisms.</p>
                     <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/>
                 </div>
 
@@ -131,7 +131,7 @@
                         <h5>Livermore, CA</h5>
                         <h5>June 2017 - Sep 2023</h5>
                     </div>
-                    <p class="experience-desc">Section explaining what I did at In-N-Out</p>
+                    <p class="experience-desc">Demonstrated reliability, attention to detail, and teamwork while delivering high-quality customer service in a fast-paced environment.</p>
                     <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/>
                 </div>
 
