added the projects page

--- a/index.html
+++ b/index.html
@@ -143,6 +143,54 @@
             <div class="outer-container" style="background-color: var(--extra-light-pink);">
                 <h1 class="title">Projects</h1>
 
+                <div class ="projects-grid-outer"> 
+                    <div class="projects-grid-item">
+                        <h3>Password Manager</h3>
+                        <h5>Jan 2025 - Present</h5>
+                        <p class="projects-desc">Developing a Python application for secure password storage. Implements PostgreSQL database integration 
+                            and an intuitive Tkinter GUI for password entry, retrieval, and management.</p>
+                    
+                        <div class="btn-container">
+                            <button class="btn">Learn More</button>
+                        </div>
+                    </div>
+
+                    <div class="projects-grid-item">
+                        <h3>Personal Portfolio Website</h3>
+                        <h5>June 2024 - Present</h5>
+                        <p class="projects-desc">A responsive portfolio website created with JavaScript/HTML/CSS to showcase personal software development
+                            projects, technical skills, and achievements</p>
+
+                        <div class="btn-container">
+                            <button class="btn">Learn More</button>
+                        </div>
+                    </div>
+
+                    <div class="projects-grid-item">
+                        <h3>AI Snake Game</h3>
+                        <h5>June 2024</h5>
+                        <p class="projects-desc">Developed and trained an AI agent using a forward-feeding neural network in Python to autonomously play a snake game.
+                            Utilized libraries such as PyTorch and Pygame.</p>
+
+                        <div class="btn-container">
+                            <button class="btn">Learn More</button>
+                        </div>
+                    </div>
+
+                    <div class="projects-grid-item">
+                        <h3>Arduino Projects</h3>
+                        <h5>Sept - Dec 2023</h5>
+                        <p class="projects-desc">Various projects built on Arduino microcontrollers in AVR Assembly. Projects include flashing LED lights in Morse Code signal patterns and 
+                            displaying custom messages on a LCD screen.</p>
+
+                        <div class="btn-container">
+                            <button class="btn">Learn More</button>
+                        </div>
+                        
+                    </div>
+
+                </div>
+
             </div>
         </section>
 
