added the github code links to each project

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
                             and an intuitive Tkinter GUI for password entry, retrieval, and management.</p>
                     
                         <div class="btn-container">
-                            <button class="btn">GitHub</button>
+                            <a href="https://github.com/Antheablz/password_manager">
+                                <button class="btn">GitHub</button>
+                            </a>
                         </div>
                     </div>
 
@@ -171,7 +173,9 @@
                             projects, technical skills, and achievements</p>
 
                         <div class="btn-container">
-                            <button class="btn">GitHub</button>
+                            <a href="https://github.com/Antheablz/Web-Portfolio">
+                                <button class="btn">GitHub</button>
+                            </a>
                         </div>
                     </div>
 
@@ -182,7 +186,9 @@
                             Utilized libraries such as PyTorch and Pygame.</p>
 
                         <div class="btn-container">
-                            <button class="btn">GitHub</button>
+                            <a href="https://github.com/Antheablz/AI-snake-game">
+                                <button class="btn">GitHub</button>
+                            </a>
                         </div>
                     </div>
 
@@ -193,7 +199,9 @@
                             displaying custom messages on a LCD screen.</p>
 
                         <div class="btn-container">
-                            <button class="btn">GitHub</button>
+                            <a href="https://github.com/Antheablz/Assembly-and-C-arduino-projects">
+                                <button class="btn">GitHub</button>
+                            </a>
                         </div>
                         
                     </div>
