updated margin spacing

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <!-- EXPERIENCE SECTION -->
         <section id="experience">
-            <div class="outer-container" style="background-color: var(--medium-pink);">
+            <div class="outer-container" style="background-color: var(--medium-pink); padding: 2.5%;">
                 <h1 class="title">Work Experience</h1>
 
                 <div class="experience-inner-container" onclick="openDialog('nrc-dialog')">
@@ -113,7 +113,6 @@
                     <div class="btn-container experience-btn">
                             <button class="btn" style="background-color: var(--medium-pink);">Read More</button>
                     </div>
-                    <!-- <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/> -->
                 </div>
 
                 <div class="experience-inner-container" onclick="openDialog('zetron-dialog')">
@@ -127,7 +126,6 @@
                     <div class="btn-container experience-btn">
                             <button class="btn" style="background-color: var(--medium-pink);">Read More</button>
                     </div>
-                    <!-- <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/> -->
                 </div>
 
                 <div class="experience-inner-container" onclick="openDialog('INO-dialog')">
@@ -141,7 +139,6 @@
                     <div class="btn-container experience-btn">
                         <button class="btn" style="background-color: var(--medium-pink);">Read More</button>
                     </div>
-                    <!-- <img src="./assets/read-more.png" alt="read-more img" class="read-more-icon" draggable="false"/> -->
                 </div>
 
             </div>
@@ -149,7 +146,7 @@
 
         <!-- PROJECTS SECTION -->
         <section id="projects">
-            <div class="outer-container" style="background-color: var(--extra-light-pink);">
+            <div class="outer-container" style="background-color: var(--extra-light-pink); padding: 2.5%;">
                 <h1 class="title">Projects</h1>
 
                 <div class ="projects-grid-outer"> 
