--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="media.css"/>
 </head>
 <body id="body-id">
-    <nav id="desktop-nav">
-        <!-- <div class="logo">Anthea Blais</div> -->
+    <nav id="desktop-nav" class="basic-bar">
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -19,8 +18,8 @@
             </ul>
         </div>
     </nav>
-    <nav id="mobile-nav">
-        <div class="logo">Anthea Blais</div>
+    <nav id="mobile-nav"  class="basic-bar">
+        <!-- <div class="logo">Anthea Blais</div> -->
         <div class="mobile-menu">
             <div id="mobile-hamburger" class="mobile-icon" onclick="toggleMenu()">
                 <div></div>
@@ -48,7 +47,7 @@
                     <button class="btn" onclick="window.open('./assets/Resume.pdf')">Resume</button>
                     <button class="btn" onclick="location.href='./#contact'">Contact Info</button>
                 </div>
-                <div id="socials-container">
+                <div class="socials-container">
                     <a href="http://www.linkedin.com/in/antheablais">
                         <img id="linkedin-icon" src="./assets/linkedin.png" alt="linkedin img" class="icon" draggable="false"/>
                     </a>
@@ -305,8 +304,8 @@
             </div>
         </dialog>
 
-        <footer class="footer">
-            <div id="socials-container" style="margin-left: 1rem;">
+        <footer class="footer basic-bar">
+            <div class="socials-container" >
                 <a href="http://www.linkedin.com/in/antheablais">
                     <img id="linkedin-icon" src="./assets/linkedin.png" alt="linkedin img" class="icon" draggable="false"/>
                 </a>
