generalizing the grid styles

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
             <div class="outer-container">
                 
                 <h1 class="title">Work Experience</h1>
-                <div class ="experience-grid-outer">
+                <div class ="grid-outer experience-grid-outer">
 
-                    <div class="experience-grid-item" onclick="openDialog('nrc-dialog')">
+                    <div class="grid-item experience-grid-item" onclick="openDialog('nrc-dialog')">
                         <div class="horizontal-container">
                             <div class="experience-headers">
                                 <p class="body-bold">Junior Realtime Interface Software Engineer</p>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="experience-grid-item" onclick="openDialog('zetron-dialog')">
+                    <div class="grid-item experience-grid-item" onclick="openDialog('zetron-dialog')">
                         <div class="horizontal-container">
                             <div class="experience-headers">
                                 <p class="body-bold">Software Engineer Co-op</p>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
 
-                    <div class="experience-grid-item" onclick="openDialog('INO-dialog')">
+                    <div class="grid-item experience-grid-item" onclick="openDialog('INO-dialog')">
                         <div class="horizontal-container">
                             <div class="experience-headers">
                                 <p class="body-bold">In-N-Out Associate</p>
@@ -177,8 +177,8 @@
             <div class="outer-container">
                 <h1 class="title">Projects</h1>
 
-                <div class ="projects-grid-outer"> 
-                    <div class="projects-grid-item">
+                <div class ="grid-outer projects-grid-outer"> 
+                    <div class="grid-item projects-grid-item">
                        <p class="header">Password Manager</p>
                         <p class="body-small body-bold">Jan 2025 - Present</p>
                         <p class="projects-desc">Developing a Python application for secure password storage. Implements PostgreSQL database integration 
@@ -191,7 +191,7 @@
                         </div>
                     </div>
 
-                    <div class="projects-grid-item">
+                    <div class="grid-item projects-grid-item">
                         <p class="header">Personal Portfolio Website</p>
                         <p class="body-small body-bold">June 2024 - Present</p>
                         <p class="projects-desc">A responsive portfolio website created with JavaScript/HTML/CSS to showcase personal software development
@@ -204,7 +204,7 @@
                         </div>
                     </div>
 
-                    <div class="projects-grid-item">
+                    <div class="grid-item projects-grid-item">
                         <p class="header">AI Snake Game</p>
                         <p class="body-small body-bold">June 2024</p>
                         <p class="projects-desc">Developed and trained an AI agent using a forward-feeding neural network in Python to autonomously play a snake game.
@@ -217,7 +217,7 @@
                         </div>
                     </div>
 
-                    <div class="projects-grid-item">
+                    <div class="grid-item projects-grid-item">
                         <p class="header">Arduino Projects</p>
                         <p class="body-small body-bold">Sept - Dec 2023</p>
                         <p class="projects-desc">Various projects built on Arduino microcontrollers in AVR Assembly. Projects include flashing LED lights in Morse Code signal patterns and 
