finally formatted the contact page

--- a/index.html
+++ b/index.html
@@ -239,6 +239,31 @@
         <section id="contact">
             <div class="outer-container">
                 <h1 class="title">Contact</h1>
+
+                   <div class="horizontal-container">
+
+                        <div class="overview-container text-outline">
+                            <div style="margin: 1.5rem;">
+                                <div class="horizontal-container">
+                                    <img id="location-icon" src="./assets/location.png" alt="location img" class="icon" draggable="false"/>
+                                    <p class="subtitle">Location</p>
+                                </div>
+                                <p style="margin-top: 0.75rem;">Victoria, BC</p>
+                            </div>
+                        </div>
+
+                        <div class="overview-container text-outline">
+                            <div style="margin: 1.5rem;">
+                                <div class="horizontal-container">
+                                    <img id="email-icon" src="./assets/email.png" alt="email img" class="icon" draggable="false"/>
+                                    <p class="subtitle">Email</p>
+                                </div>
+                                <p style="margin-top: 0.75rem;">temp-email@email.com</p>
+                            </div>
+                        </div>
+
+                    </div>
+
             </div>
         </section>
 
